<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ic_avt_foreground" />

                <TextView
                    android:id="@+id/textlogo"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/pcast"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/ic_search" />

                <ImageView
                    android:id="@+id/option"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/ic_hamburger_menu" />

            </LinearLayout>

            <TextView
                android:id="@+id/headline"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:gravity="center_vertical"
                android:text="@string/browse"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="365dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="170dp"
                android:background="@drawable/btn_search"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/idrobert"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:autofillHints="robert"
                    android:background="@null"
                    android:hint="@string/robert"
                    android:inputType="textShortMessage"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/search2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/ic_search" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="380dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="240dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/categories"
                        android:layout_width="85dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_categories_off" />

                    <ImageView
                        android:id="@+id/topics"
                        android:layout_width="85dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_avt_topics" />
                    <ImageView
                        android:id="@+id/authors"
                        android:layout_width="85dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_author_on" />



                    <ImageView
                        android:id="@+id/podcasts"
                        android:layout_width="85dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_avt_podcasts" />

                    <ImageView
                        android:id="@+id/episodes"
                        android:layout_width="85dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_avt_episodes" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/categorie"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="350dp"
                android:gravity="center_vertical"
                android:text="Author(3)"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="450dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="410dp">

                <ImageView
                    android:layout_width="340dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/bg_au_1" />

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="152dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/author1" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/robert_dugoni"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="95dp"
                    android:text="Podcasts: 7 286"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="340dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="170dp"
                    android:src="@drawable/bg_au_2" />

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="152dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="140dp"
                    android:src="@drawable/author2" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="205dp"
                    android:text="@string/j.k.rowling"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="235dp"
                    android:text="Podcasts: 7 286"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="340dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="310dp"
                    android:src="@drawable/bg_au_3" />

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="152dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="280dp"
                    android:src="@drawable/author3" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="345dp"
                    android:text="@string/mary_beth_keane"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="375dp"
                    android:text="Podcasts: 7 286"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>